# bevy-base

./: Cargo.toml  LICENSE  README.md
.cargo/: config
assets/data/: character.chd
assets/fonts/: teletactile-license.txt
assets/scenes/: sprite.ron
crates/spectre-loaders/: Cargo.toml
crates/spectre-loaders/src/: lib.rs
crates/spectre_animations/: Cargo.toml
crates/spectre_animations/src/: lib.rs
crates/spectre_combat/: Cargo.toml
crates/spectre_combat/src/: lib.rs
crates/spectre_core/: Cargo.toml
crates/spectre_core/src/: lib.rs
crates/spectre_loaders/: Cargo.toml
crates/spectre_loaders/src/: data_loaders.rs  lib.rs
crates/spectre_random/: Cargo.toml
crates/spectre_random/src/: lib.rs
crates/spectre_state/: Cargo.toml
crates/spectre_state/src/: lib.rs
crates/spectre_time/: Cargo.toml
crates/spectre_time/src/: lib.rs
src/: constants.rs  data.rs  main.rs
src/game_scenes/: game.rs  loading.rs  main_menu.rs  mod.rs
