[package]
name = "spectre-tb"
version = "0.1.0"
authors = ["Will Hart <hart.wl@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.1.3"

[profile.dev]
opt-level = 3

[profile.release]
lto = true
opt-level = 3
incremental = false
codegen-units = 1

[patch.crates-io]
bevy = { git = "https://github.com/bevyengine/bevy" }