[package]
name = "spectre"
version = "0.1.0"
authors = ["Will Hart <hart.wl@gmail.com>"]
edition = "2018"
exclude = ["assets/**/*", "crates/**/*"]

[workspace]
members = [
  "crates/*"
]

[profile.dev]
opt-level = 3

[profile.release]
lto = true
opt-level = 3
incremental = false
codegen-units = 1

[patch.crates-io]
bevy = { git = "https://github.com/bevyengine/bevy" }

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy" }

# Local dependencies

spectre_core = { path = "crates/spectre_core", version="0.1" }
spectre_time = { path = "crates/spectre_time", version="0.1" }

