[package]
name = "spectre_loaders"
version = "0.1.0"
authors = ["William Hart <hart.wl@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
bevy = "0.2"
ron = "0.6"
serde = { version = "1.0", features = ["derive"] }